# flyaround

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CONVENTIONS.md  Makefile  README.md  README.md~  TODO.md  cmake_install.cmake  flyaround  flyaround.doxy  flyaround_4-5-16
entities/: square.lua  square.lua~
objmodels/: square_textured.mtl  square_textured.wings
shaders/: testfrag  testvert
src/: CMakeLists.txt  CMakeLists.txt~  camera.cpp  camera.cpp~  camera.hpp  camera.hpp~  cinput.cpp  cinput.hpp  cl.cpp  entity.cpp  entity.hpp  game_data.hpp  glshader.cpp  glshader.hpp  glshader.hpp~  log.hpp  luaHandle.hpp  lua_interface.hpp  lua_interface.hpp~  main.cpp  netinst.cpp  netinst.hpp  obj_model.cpp  obj_model.cpp~  obj_model.hpp  obj_model.hpp~  sv.cpp  vector_math.cpp~  vector_math.hpp
src/old/: client.cpp  client.hpp  main.cpp  network_definitions.hpp  server.cpp  server.hpp
